[ISSUE-2] Update back for front (#21)
Reduce API, fix API types, clean some code

---------
