# api/openapi.yml
@@ -14,137 +14,57 @@ info:
 servers:
   - url: https://go-smo.aaletov.ru/api
 paths:
-  /source/getGenerated:
+  /getWaveInfo:
     get:
-      summary: Get all requests generated by source
-      operationId: GetAllGenRequests
-      parameters:
-        - name: sourceNum
-          in: query
-          required: true
-          schema:
-            type: integer
-          allowReserved: true
+      summary: Get all info for waveform
+      operationId: getWaveNumber
       responses:
         '200':
-          description: Get generated requests
+          description: Return number of requests
           content:
             application/json:
               schema:
-                type: array
-                items: 
-                  $ref: '#/components/schemas/ReqWT'
-        '501':
-          description: Generic error
-  /source/getAll:
+                $ref: '#/components/schemas/WaveInfo'
+  /getPivotInfo:
     get:
-      summary: Get array of all source numbers
-      operationId: GetAllSources
+      summary: Get info for pivot table
+      operationId: getPivotInfo
       responses:
         '200':
-          description: Get all sourceNums
+          description: Success
           content:
             application/json:
               schema:
-                type: array
-                items: 
-                  $ref: '#/components/schemas/APISource'
-  /buffer/getAll:
-    get:
-      summary: Get array of all buffer numbers
-      operationId: GetAllBuffers
-      responses:
-        '200':
-          description: Get all bufNums
-          content:
-            application/json:
-              schema:
-                type: array
-                items: 
-                  $ref: '#/components/schemas/APIBuffer'
-  /buffer/getAllProcessed:
-    get:
-      summary: Get all requests processed by buffer
-      operationId: GetAllBufProcessedRequests
-      parameters:
-        - name: bufNum
-          in: query
-          required: true
-          schema:
-            type: integer
-          allowReserved: true
-      responses:
-        '200':
-          description: Get processed
-          content:
-            application/json:
-              schema:
-                type: array
-                items: 
-                  $ref: '#/components/schemas/ReqWSE'
-  /device/getAll:
-    get:
-      summary: Get array of all device numbers
-      operationId: GetAllDevices
-      responses:
-        '200':
-          description: Get all devNums
-          content:
-            application/json:
-              schema:
-                type: array
-                items: 
-                  $ref: '#/components/schemas/APIDevice'
-  /device/getDone:
-    get:
-      summary: Get all requests done by device
-      operationId: GetDeviceDoneRequests
-      parameters:
-        - name: devNum
-          in: query
-          required: true
-          schema:
-            type: integer
-          allowReserved: true
-      responses:
-        '200':
-          description: Get generated requests
-          content:
-            application/json:
-              schema:
-                type: array
-                items: 
-                  $ref: '#/components/schemas/ReqWT'
-  /request/getAllRejected:
-    get:
-      summary: Get all rejected requests
-      operationId: GetAllRejectedRequests
-      responses:
-        '200':
-          description: Get all rejected requests
-          content:
-            application/json:
+                $ref: '#/components/schemas/PivotInfo'
+  /initSystem:
+    post:
+      summary: Create new system
+      operationId: initSystem
+      requestBody:
+        description: System parameters
+        required: true
+        content:
+              application/json:
                 schema:
-                  type: array
-                  items: 
-                    $ref: '#/components/schemas/ReqWSE'
-  /request/getAllDone:
-    get:
-      summary: Get all done requests
-      operationId: GetAllDoneRequests
+                  $ref: '#/components/schemas/SystemParameters'
       responses:
         '200':
-          description: Get all done requests
-          content:
-            application/json:
-                schema:
-                  type: array
-                  items: 
-                    $ref: '#/components/schemas/ReqWT'
+          description: Success
+  /doStep:
+    post:
+      summary: Do step
+      operationId: doStep
+      responses:
+        '200':
+          description: Success
+
 components:
   schemas:
     ReqWT:
       type: object
+      required:
+        - request
+        - time
       properties:
         request: 
           $ref: '#/components/schemas/Request'
@@ -153,20 +73,20 @@ components:
           format: date-time
     Request:
       type: object
+      required:
+        - sourceNumber
+        - requestNumber
       properties:
         sourceNumber:
           type: integer
         requestNumber:
           type: integer
-    Buffer:
-      type: object
-      properties:
-        bufNumber: 
-          type: integer
-        currentRequest:
-          $ref: '#/components/schemas/Request'
     ReqWSE:
       type: object
+      required:
+        - request
+        - start
+        - end
       properties:
         request: 
           $ref: '#/components/schemas/Request'
@@ -178,20 +98,173 @@ components:
           format: date-time
     APISource:
       type: object
+      required:
+        - sourceNum
+        - generated
       properties:
         sourceNum:
           type: integer
+        generated:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReqWT'
     APIBuffer:
       type: object
+      required:
+        - bufNum
+        - processed
       properties:
         bufNum:
           type: integer
+        processed:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReqWSE'
+        current:
+          $ref: '#/components/schemas/ReqWT'
     APIDevice:
       type: object
+      required:
+        - devNum
+        - done
       properties:
         devNum:
           type: integer
-        
+        done:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReqWSE'
+        current:
+          $ref: '#/components/schemas/ReqWT'
+    WaveInfo:
+      type: object
+      required:
+        - startTime
+        - endTime
+        - sources
+        - buffers
+        - devices
+        - rejected
+        - done
+      properties:
+        startTime:
+          type: string
+          format: date-time
+        endTime:
+          type: string
+          format: date-time
+        sources:
+          type: array
+          items:
+            $ref: '#/components/schemas/APISource'
+        buffers:
+          type: array
+          items:
+            $ref: '#/components/schemas/APIBuffer'
+        devices:
+          type: array
+          items:
+            $ref: '#/components/schemas/APIDevice'
+        rejected:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReqWSE'
+        done:
+          type: array
+          items:
+            $ref: '#/components/schemas/ReqWSE'
+    PivotInfo:
+      type: object
+      required:
+        - sourcesPivotInfo
+        - devicesPivotInfo
+      properties:
+        sourcesPivotInfo:
+          type: array
+          items:
+            $ref: '#/components/schemas/SourcePivotInfo'
+        devicesPivotInfo:
+          type: array
+          items:
+            $ref: '#/components/schemas/DevicePivotInfo'
+    SourcePivotInfo:
+      type: object
+      required:
+        - name
+        - reqCount
+        - rejChance
+        - sysTime
+        - waitTime
+        - procTime
+        - waitTimeDispertion
+        - procTimeDispertion
+      properties:
+        name:
+          type: string
+        reqCount:
+          type: integer
+        rejChance:
+          type: number
+          format: double
+        sysTime:
+          type: string
+          format: duration
+        waitTime:
+          type: string
+          format: duration
+        procTime:
+          type: string
+          format: duration
+        waitTimeDispertion:
+          type: string
+          format: duration
+        procTimeDispertion:
+          type: string
+          format: duration
+    DevicePivotInfo:
+      type: object
+      required:
+        - name
+        - usageCoef
+      properties:
+        name:
+          type: string
+        usageCoef:
+          type: number
+          format: double
+    SystemParameters:
+      type: object
+      required:
+        - sourcesCount
+        - buffersCount
+        - devicesCount
+        - sourcesLambda
+        - devA
+        - devB
+        - stepMode
+      properties:
+        sourcesCount:
+          type: integer
+        buffersCount:
+          type: integer
+        devicesCount:
+          type: integer
+        sourcesLambda:
+          type: string
+          format: duration
+        devA:
+          type: string
+          format: duration
+        devB:
+          type: string
+          format: duration
+        stepMode:
+          type: boolean
+        iterationsCount:
+          type: integer
+
+
+          
 
         
 
